@@ -5,7 +5,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.66 2003/01/28 12:15:41 rlk Exp $"
+   "$Id: printers.xml,v 1.67 2003/01/28 14:40:21 davehill Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -943,6 +943,24 @@
       </printer>
     </family>
     <family name="pcl">
+      <printer name="APPLE Color StyleWriter 4100" driver="pcl-apple-4100">
+        <color value="true"/>
+        <model value="601"/>	<!-- Uses 600 series driver -->
+        <gamma value="0.818"/>
+        <density value="0.786"/>
+      </printer>
+      <printer name="APPLE Color StyleWriter 4500" driver="pcl-apple-4500">
+        <color value="true"/>
+        <model value="690"/>	<!-- Uses 690 driver -->
+        <gamma value="0.818"/>
+        <density value="0.786"/>
+      </printer>
+      <printer name="APPLE Color StyleWriter 6500" driver="pcl-apple-6500">
+        <color value="true"/>
+        <model value="800"/>	<!-- Uses 850 driver -->
+        <gamma value="0.818"/>
+        <density value="0.786"/>
+      </printer>
       <printer name="HP DeskJet 340" driver="pcl-340">
         <color value="true"/>
         <model value="340"/>
