@@ -390,6 +390,9 @@ printers for any instructions specific to your printer.
 
 PostScript level 1        (GIMP Plugin only)
 PostScript level 2        (GIMP Plugin only)
+Apple Color StyleWriter 4100   (same as HP DeskJet 660C)
+Apple Color StyleWriter 4500   (same as HP DeskJet 690C)
+Apple Color StyleWriter 6500   (same as HP Deskjet 850C)
 CANON BJC 30
 CANON BJC 50
 CANON BJC 55
